portfolio/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital@0;1&display=swap");
@import "tailwindcss";
@custom-variant dark (&:where(.dark, .dark *));

html,
body,
#root {
  min-height: 100%;
}

body {
  @apply bg-white text-neutral-900 dark:bg-neutral-950 dark:text-neutral-100;
}
* {
  font-family: "Hanken Grotesk", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

